# MONOFRAME-STUDIO

./: .eslintrc.json  .gitignore  DEMORESULTS_REFACTOR_COMPLETE.md  HYDRATION_FIX.md  PHASE_12A_COMPLETE.md  PHASE_12B_COMPLETE.md  PHASE_12C_COMPLETE.md  PHASE_12D_COMPLETE.md  PHASE_13_COMPLETE.md  PHASE_14_COMPLETE.md  PHASE_15_COMPLETE.md  PHASE_16_COMPLETE.md  PHASE_17_COMPLETE.md  PHASE_18_COMPLETE.md  PHASE_19_COMPLETE.md  PHASE_20_COMPLETE.md  PHASE_21_PART1_COMPLETE.md  PHASE_21_PART2_COMPLETE.md  PHASE_21_PART3_COMPLETE.md  PHASE_21_PART4_COMPLETE.md  PHASE_21_PART5_COMPLETE.md  PHASE_21_PART6_COMPLETE.md  PHASE_21_PART7_COMPLETE.md  PHASE_21_VALIDATION_COMPLETE.md  README.md  ROADMAP.md  create-pngs.js  cursorRules.md  dev.sh  generate-brand-assets.js  package.json  pnpm-lock.yaml
apps/api/: README.md  main.py  pyproject.toml
apps/web/: README.md  next.config.js  package.json  tailwind.config.ts
apps/web/public/: README.md
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/demo/: layout.tsx  page.tsx
apps/web/src/app/preview/: page.tsx
apps/web/src/app/processing/: page.tsx
apps/web/src/app/test-og/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/hooks/: index.ts  useFullscreen.ts
apps/web/src/lib/: editorSessionStore.ts  exporter.ts  projectStore.ts  shareStore.ts
docs/: ARCHITECTURE.md  CLIP_EDITOR.md  CLIP_EXPORTING.md  EPIC2_COMPLETE.md  EXPORT_OVERLAY.md  LANDING_PAGE.md  README.md  SETUP.md
infra/: README.md
scripts/: generate-placeholders.js
(+115 files in other folders)
